--- a/DevelopersDirectory/DevelopersDirectory/packages.config
+++ b/DevelopersDirectory/DevelopersDirectory/packages.config
@@ -29,6 +29,7 @@
   <package id="Ninject.MVC5" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.2.0.0" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
