--- a/DevelopersDirectory/DevelopersDirectory/packages.config
+++ b/DevelopersDirectory/DevelopersDirectory/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="AutoMapper" version="6.1.0" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="jQuery" version="3.3.1" targetFramework="net452" />
@@ -19,17 +20,24 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
-  <package id="Ninject.MVC5" version="3.2.0.0" targetFramework="net452" />
-  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
-  <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
-  <package id="Ninject.Web.WebApi" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject" version="3.3.3" targetFramework="net452" />
+  <package id="Ninject.Extensions.NamedScope" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.OwinHost" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi.OwinHost" version="3.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi.WebHost" version="3.3.0" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
