Completed implementation to create developer entry, added automapper config

--- a/DevelopersDirectory/DevelopersDirectory/DevelopersDirectory.csproj
+++ b/DevelopersDirectory/DevelopersDirectory/DevelopersDirectory.csproj
@@ -48,6 +48,9 @@
     <Reference Include="AutoMapper, Version=6.1.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.1.0\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="Elmah, Version=1.2.14706.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\elmah.corelibrary.1.2.2\lib\Elmah.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -214,6 +217,7 @@
     </Compile>
     <Compile Include="Interfaces\IDevelopersRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="MappingProfile\ProfileMapping.cs" />
     <Compile Include="Migrations\201811290147447_InitialMigration.cs" />
     <Compile Include="Migrations\201811290147447_InitialMigration.Designer.cs">
       <DependentUpon>201811290147447_InitialMigration.cs</DependentUpon>
@@ -226,6 +230,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Directory.mdf" />
+    <Content Include="App_Data\Directory_log.ldf">
+      <DependentUpon>Directory.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -258,9 +266,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
   </ItemGroup>
